Fix design issues on mobile

--- a/ui/src/styles/components/_waitingRoom.scss
+++ b/ui/src/styles/components/_waitingRoom.scss
@@ -10,7 +10,7 @@
     margin: 0 auto;
 
     @media screen and (max-width: 1420px) {
-        width: 95%;
+        width: 100%;
     }
 }
 
@@ -27,8 +27,9 @@
     border-radius: 6px;
     background-color: #FFFFFF;
 
-    @media screen and (max-width: 420px) {
-        .general-info {
+    @media screen and (max-width: 700px) {
+        width: 95%;
+        .general-info-waitingRoom {
             width: 95%;
         }
     }
@@ -50,6 +51,12 @@
             0px 24px 60px rgba(6, 48, 125, 0.295),
             0px 12px 24px rgba(27, 59, 119, 0.103);
         transition: all 0.5s ease-in;
+    }
+
+    @media screen and (max-width: 700px) {
+        .paper-waitingRoom {
+            margin: 0px 16px;
+        }
     }
 }
 
